[package]
name = "scorpion-ui-theme"
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
rust-version = { workspace = true }
keywords.workspace = true

[dependencies]
floem = {workspace=true}
toml              = {workspace=true}
serde             = {workspace=true}
anyhow            = {workspace=true}
palette           = {workspace=true}